# customize-example

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-lint.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/workflows/: flake8.yml  label-sync.yml  pre-commit.yml  setup.yml
.reuse/: dep5
weblate_customization/: __init__.py  addons.py  checks.py  models.py
