[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.18,<0.10.0"]

[dependency-groups]
dev = [
  {include-group = "lint"}
]
lint = [
  {include-group = "pre-commit"}
]
pre-commit = [
  "pre-commit==4.5.0"
]

[project]
authors = [
  {name = "Michal Čihař", email = "michal@weblate.org"}
]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Localization",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
dependencies = [
  "Weblate"
]
description = "Weblate customization example"
keywords = [
  "i18n",
  "l10n",
  "gettext",
  "git",
  "mercurial",
  "translate"
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
name = "weblate_customization"
requires-python = ">=3.11"
version = "0.1"

[project.readme]
content-type = "text/x-rst"
file = "README.rst"

[project.urls]
Homepage = "https://weblate.org/"

[tool.check-manifest]
ignore = [
  "*.yaml",
  "*.yml",
  ".editorconfig",
  "LICENSES/*",
  ".reuse/*"
]

[tool.isort]
profile = "black"

[tool.ruff]
ignore = [
  "D203",  # CONFIG: incompatible with D211
  "D212"  # CONFIG: incompatible with D213
]
select = [
  "E",
  "F",
  "B",
  "T10",
  "A",
  "C4",
  "C90",
  "YTT",
  "DJ",
  "UP",
  "D",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "RUF",
  "ERA",
  "ICN",
  "ISC",
  "EXE",
  "INP",
  "PIE",
  "G",
  "PYI",
  "Q",
  "SIM",
  "TID",
  "RSE",
  "T20",
  "RET",
  "SLF",
  "N"
]
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.mccabe]
max-complexity = 16

[tool.uv.build-backend]
source-include = [
  "SECURITY.md"
]
